--- a/styles.css
+++ b/styles.css
@@ -466,12 +466,12 @@ h1 {
 }
 
 .phone {
-  background-color: #f3f3f3;
+  background-color: white;
   color: black;
 }
 
 .email {
-  background-color: #5dbc95;
+  background-color: white;
   color: black;
 }
 
