--- a/styles.css
+++ b/styles.css
@@ -398,8 +398,7 @@ h1 {
   box-shadow: 0 0 8px #5dbc95;
 }
 
-#login-btn,
-#signup-btn {
+#login-btn {
   width: 100%;
   padding: 12px;
   margin-top: 10px;
@@ -413,9 +412,25 @@ h1 {
   transition: 0.3s ease;
 }
 
-#login-btn:hover,
-#signup-btn:hover {
+#signup-btn {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s ease;
+
+#login-btn:hover {
   background-color: #4aa77f;
+}
+ 
+#signup-btn:hover {
+  background-color: #d9d9d9; 
 }
 
 .continue-btn {
